# cathapult

./: .gitignore  README.md  manifest.in  pyproject.toml
cathapult/: __init__.py  analyze.py  cli.py  db.py  enrichment.py  fetcher.py  plot.py
cathapult/data/: cath-superfamily-list.txt
